use box-sizing to fix input overflow problems

--- a/assets/css/alextcone.css
+++ b/assets/css/alextcone.css
@@ -79,6 +79,8 @@ form {
 }
 input[type='text'] {
 	border: 4px solid #3C3F42;
+	border-radius: 0;
+	box-sizing: border-box;
 	color: #3C3F42;
 	display: block;
 	font-family: Helvetica, arial, sans-serif;
@@ -89,7 +91,9 @@ input[type='text'] {
 	position: relative;
 	top: 0;
 	width: 100%;
+	-moz-box-sizing: border-box;
 	-webkit-appearance: none;
+	-webkit-box-sizing: border-box;
 	-webkit-border-radius: 0; 
 }
 input[type='text']:focus {
@@ -99,6 +103,8 @@ input[type='text']:focus {
 input[type=submit] {
 	background: #3C3F42;
 	border: 1px solid #3C3F42;
+	border-radius;
+	box-sizing: border-box;
 	color: #DEDEDE;
 	cursor: pointer;
 	font-family: Helvetica, arial, sans-serif;
@@ -106,12 +112,14 @@ input[type=submit] {
 	line-height: 1;
 	padding: 0;
 	position: absolute;
-	right: -0.42em;
+	right: 0;
 	top: 0;
 	bottom: 0;
 	width: 4em;
 	z-index: 1;
+	-moz-box-sizing: border-box;
 	-webkit-appearance: none;
+	-webkit-box-sizing: border-box;
 	-webkit-border-radius: 0; 
 }
 input[type=submit]:focus {
@@ -172,11 +180,10 @@ section:nth-of-type(3) {
 	}
 	input[type='text'] {
 		font-size: 1.2em;
-	    border-radius: 0;
 	}
 	input[type='submit'] {
 		font-size: 1.2em;
-		right: -0.75em;
+		right: 0;
 	}
 	section:nth-of-type(3) {
 		margin-bottom: 60px;
